@@ -1,4 +1,4 @@
-ikiwiki.setup
+/ikiwiki.setup
 /Makefile
 Makefile.old
 blib/*
