@@ -9,15 +9,17 @@ all:
 	mkdir -p git/doc/writable
 	cd git && git init
 	cp index.mdwn git/doc/index.mdwn
+	cp -a $(CURDIR)/../../../doc/wikiicons git/doc/
+	cp -a $(CURDIR)/../../../doc/recentchanges.mdwn git/doc/
 	echo "This is the first test page" > git/doc/writable/one.mdwn
 	echo "This is the second test page" > git/doc/writable/two.mdwn
-	cd git && git add doc && git commit -m 'Initial commit'
+	cd git && git add . && git commit -m 'Initial commit'
 	$(ikiwiki) --setup ikiwiki.setup
 	echo "This is the first test page, it was first" > git/doc/writable/one.mdwn
-	cd git && git add doc && git commit -m 'First web commit'
+	cd git && git add . && git commit -m 'First web commit'
 	$(ikiwiki) --setup ikiwiki.setup
 	echo "This is the second test page, it came second" > git/doc/writable/two.mdwn
-	cd git && git add doc && git commit -m 'Second web commit'
+	cd git && git add . && git commit -m 'Second web commit'
 	$(ikiwiki) --setup ikiwiki.setup
 	cd git && git mv doc/writable/one.mdwn doc/one.mdwn
 	cd git && git mv doc/writable/two.mdwn two.mdwn
