@@ -1,6 +1,7 @@
 ikiwiki (3.20161220) UNRELEASED; urgency=medium
 
   * Add CVE references for CVE-2016-10026
+  * Add missing ikiwiki.setup for the manual test for CVE-2016-10026
 
  -- Simon McVittie <smcv@debian.org>  Wed, 21 Dec 2016 13:03:07 +0000
 
